# ShipStabilityLib

./: .gitattribute  .gitignore  CMakeLists.txt  Chapter01__Forces_8h.html  Chapter01__Forces_8h.js  Chapter01__Forces_8h_source.html  FreeSurfaceEffect_8h.html  FreeSurfaceEffect_8h.js  FreeSurfaceEffect_8h__dep__incl.map  FreeSurfaceEffect_8h__dep__incl.md5  FreeSurfaceEffect_8h__incl.map  FreeSurfaceEffect_8h__incl.md5  FreeSurfaceEffect_8h_source.html  GMCalculator_8h.html  GMCalculator_8h.js  GMCalculator_8h__dep__incl.map  GMCalculator_8h__dep__incl.md5  GMCalculator_8h__incl.map  GMCalculator_8h__incl.md5  GMCalculator_8h_source.html  GZCurveCalculator_8h.html  GZCurveCalculator_8h.js  GZCurveCalculator_8h__dep__incl.map  GZCurveCalculator_8h__dep__incl.md5  GZCurveCalculator_8h__incl.map  GZCurveCalculator_8h__incl.md5  GZCurveCalculator_8h_source.html  ROADMAP.md  Section_8h.html  Section_8h.js  Section_8h_source.html  StabilityAPI_8h.html  StabilityAPI_8h.js  StabilityAPI_8h__incl.map  StabilityAPI_8h__incl.md5  StabilityAPI_8h_source.html  Version_8h_source.html  VesselJsonParser_8h.html  VesselJsonParser_8h.js  VesselJsonParser_8h__incl.map  (+105 more)
.github/workflows/: deploy-docs.yml
docs/: Doxyfile  index.md
examples/: minimal_usage.cpp
include/ShipStabilityLib/: StabilityAPI.h  Version.h  Version.h.in
include/ShipStabilityLib/Book/: Chapter01_Forces.h
include/ShipStabilityLib/Calculations/: FreeSurfaceEffect.h  GMCalculator.h  GZCurveCalculator.h
include/ShipStabilityLib/Domain/: Section.h  Vessel.h  Weight.h
include/ShipStabilityLib/IO/: VesselJsonParser.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js  (+8 more)
src/: StabilityAPI.cpp
src/Book/: Chapter01_Forces.cpp
src/Calculations/: FreeSurfaceEffect.cpp  GMCalculator.cpp  GZCurveCalculator.cpp
src/Domain/: Section.cpp  Vessel.cpp  Weight.cpp
src/IO/: VesselJsonParser.cpp
tests/: CMakeLists.txt  test_GMCalculator.cpp  test_main.cpp
tests/Book/: test_Chapter01.cpp
